# dayturn-core

./: .gitbugtraq  .gitignore  .hgignore  .hgtags  1-Build-Linux  1-get-libs  2-build-libs  BUILD_INSTRUCTIONS.md  BuildMe-Cmake-AU.sh  BuildMe-Cmake.sh  BuildMe-Ninja.sh  BuildMe.sh  BuildParams  LINUX_INSTALL_SETUP_README  MAC_REBRANDING_TIPS_README  README  README.MD  README.md  autobuild-NT.xml  autobuild.xml  build.sh  ca-bundle.crt  ent.plist  install.xml  plugins-install-SLK-14.1.sh  viewer.entitlements
indra/: CMakeLists.txt  edit-me-to-trigger-new-build.txt  fix-incredibuild.py
indra/cmake/: 00-COMPILE-LINK-RUN.txt  00-Common.cmake  Boost.cmake  BuildPackagesInfo.cmake  BuildVersion.cmake  CEFPlugin.cmake  CMakeLists.txt  CURL.cmake  ConfigurePkgConfig.cmake  Copy3rdPartyLibs.cmake  DragDrop.cmake  FMOD.cmake  FMODEX.cmake  FMODSTUDIO.cmake  FindFMODEX.cmake  FindFMODSTUDIO.cmake  FindHACD.cmake  GStreamer010Plugin.cmake  GooglePerfTools.cmake  HACD.cmake  JsonCpp.cmake  LLAddBuildTest.cmake  LLCA.cmake  LLConvexDecomposition.cmake  LLPhysicsExtensions.cmake  LLPlugin.cmake  LLPrimitive.cmake  LLWindow.cmake  Linking.cmake  Meshoptimizer.cmake  OPENAL.cmake  OpenJPEG.cmake  PNG.cmake  PulseAudio.cmake  Python.cmake  QuickTimePlugin.cmake  UI.cmake  Variables.cmake  ViewerMiscLibs.cmake  WebKitLibPlugin.cmake  (+3 more)
indra/copy_win_scripts/: start-client.py
indra/libopenjpeg/: openjpeg.h
indra/linux_crash_logger/: linux_crash_logger.cpp  llcrashloggerlinux.cpp
indra/linux_updater/: linux_updater.cpp
indra/llappearance/: llavatarappearance.cpp  llavatarappearance.h  llavatarappearancedefines.cpp  llavatarjoint.cpp  llavatarjoint.h  llavatarjointmesh.cpp  llavatarjointmesh.h  lldriverparam.cpp  lldriverparam.h  lllocaltextureobject.cpp  lllocaltextureobject.h  llpolymesh.cpp  llpolymorph.cpp  llpolymorph.h  llpolyskeletaldistortion.cpp  llpolyskeletaldistortion.h  lltexglobalcolor.cpp  lltexlayer.cpp  lltexlayer.h  lltexlayerparams.cpp  lltexlayerparams.h  lltexturemanagerbridge.h  llviewervisualparam.cpp  llviewervisualparam.h  llwearable.cpp  llwearable.h  llwearabledata.cpp  llwearabledata.h  llwearabletype.cpp  llwearabletype.h
indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudiodecodemgr.h  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmodex.cpp  llaudioengine_fmodstudio.cpp  llaudioengine_openal.cpp  lllistener_fmodex.cpp  lllistener_fmodstudio.cpp  lllistener_fmodstudio.h  llstreamingaudio.h  llstreamingaudio_fmodex.cpp  llstreamingaudio_fmodex.h  llstreamingaudio_fmodstudio.cpp  llstreamingaudio_fmodstudio.h  llvorbisencode.cpp  llvorbisencode.h
indra/llcharacter/: llanimationstates.cpp  llbvhloader.cpp  llbvhloader.h  llcharacter.cpp  llcharacter.h  lleditingmotion.cpp  lleditingmotion.h  llgesture.cpp  llgesture.h  llhandmotion.cpp  llhandmotion.h  llheadrotmotion.cpp  llheadrotmotion.h  lljoint.cpp  lljoint.h  lljointsolverrp3.cpp  lljointstate.h  llkeyframefallmotion.cpp  llkeyframemotion.cpp  llkeyframemotion.h  llkeyframemotionparam.cpp  llkeyframemotionparam.h  llkeyframestandmotion.cpp  llkeyframestandmotion.h  llkeyframewalkmotion.cpp  llmotion.cpp  llmotion.h  llmotioncontroller.cpp  llmotioncontroller.h  llmultigesture.cpp  llpose.cpp  llstatemachine.cpp  lltargetingmotion.cpp  lltargetingmotion.h  llvisualparam.cpp  llvisualparam.h
indra/llcommon/: CMakeLists.txt  StackWalker.cpp  apply.h  indra_constants.h  linden_common.h  llagentconstants.h  llallocator_heap_profile.cpp  llapp.cpp  llapp.h  llapr.cpp  llapr.h  llavatarname.cpp  llavatarname.h  llbase64.cpp  llbase64.h  llbool.h  llcallbacklist.cpp  llchat.h  llcommon.cpp  llcoros.cpp  llcoros.h  lldate.cpp  lldate.h  lldefs.h  lldepthstack.h  lldoubledispatch.h  llerror.cpp  llerror.h  llerrorcontrol.h  llerrorthread.cpp  lleventcoro.h  lleventdispatcher.cpp  lleventdispatcher.h  lleventemitter.h  lleventfilter.h  llevents.h  lleventtimer.h  llfasttimer.cpp  llfasttimer.h  llfasttimer_class.cpp  (+90 more)
indra/llcorehttp/: CMakeLists.txt  _httpinternal.h  _httplibcurl.cpp  _httpoperation.cpp  _httpoprequest.cpp  _httpoprequest.h  _httppolicy.cpp  _httprequestqueue.cpp  _httpservice.cpp  bufferarray.cpp  httpcommon.cpp  httpcommon.h  httpoptions.cpp  httpoptions.h  httprequest.cpp  httpresponse.h  llhttpconstants.h
indra/llcrashlogger/: llcrashlock.cpp  llcrashlock.h  llcrashlogger.cpp  llcrashlogger.h
indra/llfilesystem/: CMakeLists.txt  lldir.cpp  lldir.h  lldir_linux.cpp  lldir_mac.cpp  lldir_mac.h  lldir_utils_objc.h  lldir_utils_objc.mm  lldir_win32.cpp  lldir_win32.h  lldiriterator.cpp  lldiskcache.cpp  lllfsthread.h
indra/llimage/: CMakeLists.txt  llimage.cpp  llimage.h  llimagefilter.cpp  llimagej2c.cpp  llimagej2c.h  llimagejpeg.cpp  llimagepng.h  llimageworker.cpp  llimageworker.h  llpngwrapper.cpp  llpngwrapper.h
indra/llimagej2coj/: llimagej2coj.cpp
indra/llinventory/: CMakeLists.txt  lleconomy.cpp  llfoldertype.cpp  llfoldertype.h  llinventory.cpp  llinventory.h  lllandmark.cpp  llnotecard.cpp  llparcel.cpp  llparcel.h  llpermissions.cpp  llpermissions.h  llpermissionsflags.h  llsaleinfo.cpp  llsaleinfo.h  llsettingsdaycycle.cpp  llsettingssky.h  llsettingswater.cpp  lltransactionflags.cpp
indra/llkdu/: llimagej2ckdu.cpp  llimagej2ckdu.h  llkdumem.h  readme.txt
indra/llmath/: llcalcparser.cpp  llcalcparser.h  llcamera.cpp  llinterp.h  llline.h  llmath.h  lloctree.cpp  lloctree.h  llperlin.h  llquaternion.cpp  llsdutil_math.cpp  llsimdmath.h  llsimdtypes.h  llsphere.h  lltreenode.h  llvector4a.h  llvector4logical.h  llvolume.cpp  llvolume.h  llvolumemgr.cpp  llvolumeoctree.cpp  m3math.h  m4math.cpp  m4math.h  raytrace.cpp  raytrace.h  v2math.cpp  v2math.h  v3color.cpp  v3color.h  v3dmath.cpp  v3dmath.h  v3math.cpp  v4color.cpp  v4color.h  v4coloru.cpp  v4coloru.h  v4math.cpp  v4math.h  xform.h
indra/llmessage/: CMakeLists.txt  llassetstorage.cpp  llassetstorage.h  llavatarname.cpp  llavatarname.h  llavatarnamecache.cpp  llavatarnamecache.h  llbuffer.cpp  llcachename.cpp  llcachename.h  llcircuit.cpp  (+69 more)
(+3499 files in other folders)
